# antons_opengl_tutorials_book

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.txt  CMakeLists.txt  LICENCE.md  LICENCE.txt  README.md  README.txt  TODO_FIXES  TODO_MATHS_FUNCS_H_  build.bat  build_all_linux.sh  build_all_linux64.sh  build_all_linux_macos.sh  build_all_linux_osx.sh  build_all_mingw.bat  build_all_msvc.bat  maths_funcs.cpp  maths_funcs.h  meson.build
00_hello_triangle/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  build.bat  fragment.shader.cmake  main.c  main_exp1.c  main_exp2.c  vertex.shader.cmake
00_hello_triangle_gl2.1/: Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  main.c
01_extended_init/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  main.c
02_shaders/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.c  gl_utils.h  main.c  test_fs.glsl  test_vs.glsl
03_vertex_buffer_objects/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp
04_mats_and_vecs/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp  test_vs.glsl
05_virtual_camera/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp  maths_funcs.cpp  maths_funcs.h  test_fs.glsl  test_vs.glsl
06_vcam_with_quaternion/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp  maths_funcs.cpp  maths_funcs.h
07_ray_picking/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp  obj_parser.h  test_fs.glsl
08_phong/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.h  main.cpp  test_fs.glsl  test_vs.glsl
09_texture_mapping/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  main.cpp  test_fs.glsl
10_screen_capture/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  main.cpp  stb_image.c  stb_image_write.h
11_video_capture/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  main.cpp  stb_image_write.c
12_debugging_shaders/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp  obj_parser.cpp  test_vs.glsl
13_mesh_import/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  main.cpp  test_fs.glsl
14_multi_tex/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  main.cpp  test_vs.glsl
15_phongtextures/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.h  main.cpp  monkey.blend  stb_image.h  test_fs.glsl
16_frag_reject/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp  maths_funcs.h  stb_image.h  test_fs.glsl
17_alpha_blending/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp  maths_funcs.cpp  test_vs.glsl
18_spotlights/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  main.cpp  maths_funcs.h  test_fs.glsl
19_fog/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  main.cpp  test_fs.glsl  test_vs.glsl
20_normal_mapping/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  main.cpp  test_fs.glsl  test_vs.glsl
21_cube_mapping/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  cube_fs.glsl  cube_vs.glsl  gl_utils.cpp  main.cpp  refract_vs.glsl
22_geom_shaders/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp  test_fs.glsl  test_gs.glsl
23_tessellation_shaders/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  gl_utils.cpp  gl_utils.h  main.cpp  test_tcs.glsl  test_vs.glsl
24_gui_panels/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  main.cpp  maths_funcs.h
25_sprite_sheets/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  build.bat  main.cpp
26_bitmap_fonts/: CMakeLists.txt  (+9 more)
31_skinning_part_two/: CMakeLists.txt  Makefile.linux64  Makefile.osx  Makefile.osxARM  Makefile.win32  Makefile.win64  gl_utils.cpp  main.cpp  monkey_with_skeleton.dae  monkey_with_skeleton_y_up.dae  test_vs.glsl
32_skinnng_part_three/: CMakeLists.txt  Makefile.linux32  Makefile.linux64  gl_utils.cpp  main.cpp  test_fs.glsl
(+343 files in other folders)
